@@ -17,6 +17,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   c - using depend=syncwith crashed pbs_server
   c - races with down nodes and purging jobs crashed pbs_server
   b - staged out files will retain proper permission bits
+  f - backported qsub -W umask=
 
 2.1.2
 
